--- a/liste_apprenant.html
+++ b/liste_apprenant.html
@@ -38,7 +38,7 @@
             <th> <input type="button" value="suprimer"></th>
         </tr>
         <tr>
-            <th> Mouhamed</th>
+            <th> Moustapha</th>
             <th> <a href="detailler-apprenant.html#Mouhamed"> Thiam</a></th>
             <th> <input type="button" value="suprimer"></th>
         </tr>
