--- a/modules.html
+++ b/modules.html
@@ -8,7 +8,7 @@
     <title>Module</title>
 </head>
 <body class="is-preload">
-    <div id ='Daba'></div>
+<div id ='Daba'>
     <h1>---------------------------- Daba Diop------------------------------------</h1>
     <h2> Nationalité : Senegalaise</h2>
     <h2> Module</h2>
@@ -21,9 +21,80 @@
         <li>Bases de Données</li>
         <li>JumpStart sur AWS</li>
         <li>JumpStart sur AWS Advanced</li>
-        <li>Anquete d'évaluation post-cohorte</li>
-        <li>JumpStart sur AWS</li>
+        <li>Enquete d'évaluation post-cohorte</li>
+        <li>Rreparation aux examens</li>
     </ul>
+</div><br>
+<div id ='Djdji '>
+    <h1>---------------------------- Djadji Samba Sow------------------------------------</h1>
+    <h2> Nationalité : Senegalais</h2>
+    <h2> Module</h2>
+    <ul>
+        <li>Introduction aux fondamentaux du cloud</li>
+        <li>Linux</li>
+        <li>Réseautage</li>
+        <li>Introduuction à la sécurité</li>
+        <li>Programmation Python</li>
+        <li>Bases de Données</li>
+        <li>JumpStart sur AWS</li>
+        <li>JumpStart sur AWS Advanced</li>
+        <li>Enquete d'évaluation post-cohorte</li>
+        <li>Rreparation aux examens</li>
+    </ul>
+</div><br>
+
+<div id ='Mouhamed '>
+    <h1>----------------------------Tall------------------------------------</h1>
+    <h2> Nationalité : Senegalaise</h2>
+    <h2> Module</h2>
+    <ul>
+        <li>Introduction aux fondamentaux du cloud</li>
+        <li>Linux</li>
+        <li>Réseautage</li>
+        <li>Introduuction à la sécurité</li>
+        <li>Programmation Python</li>
+        <li>Bases de Données</li>
+        <li>JumpStart sur AWS</li>
+        <li>JumpStart sur AWS Advanced</li>
+        <li>Enquete d'évaluation post-cohorte</li>
+        <li>Rreparation aux examens</li>
+    </ul>
+</div><br>
+<div id ='Mame Bineta '>
+    <h1>----------------------------  Mame Binta Diakité------------------------------------</h1>
+    <h2> Nationalité : Senegalais</h2>
+    <h2> Module</h2>
+    <ul>
+        <li>Introduction aux fondamentaux du cloud</li>
+        <li>Linux</li>
+        <li>Réseautage</li>
+        <li>Introduuction à la sécurité</li>
+        <li>Programmation Python</li>
+        <li>Bases de Données</li>
+        <li>JumpStart sur AWS</li>
+        <li>JumpStart sur AWS Advanced</li>
+        <li>Enquete d'évaluation post-cohorte</li>
+        <li>Rreparation aux examens</li>
+    </ul>
+</div><br>
+<div id ='Moustapha '>
+    <h1>---------------------------- Moustapha Thiam------------------------------------</h1>
+    <h2> Nationalité : Senegalaise</h2>
+    <h2> Module</h2>
+    <ul>
+        <li>Introduction aux fondamentaux du cloud</li>
+        <li>Linux</li>
+        <li>Réseautage</li>
+        <li>Introduuction à la sécurité</li>
+        <li>Programmation Python</li>
+        <li>Bases de Données</li>
+        <li>JumpStart sur AWS</li>
+        <li>JumpStart sur AWS Advanced</li>
+        <li>Enquete d'évaluation post-cohorte</li>
+        <li>Rreparation aux examens</li>
+    </ul>
+</div><br>
+
 
 
     
