--- a/liste_apprenant.html
+++ b/liste_apprenant.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1> 
-        <center> LISTE DES APPRENANTS </center>
+    <center> LISTE DES APPRENANTS </center>
     </h1>
     <table border="5" align="center">
         <tr>
@@ -19,7 +19,7 @@
         
         <tr>
             <th> Daba</th>
-            <th> <a href="detailler-apprenant.html#Daba"> Diop</a></th>
+            <th> <a href="detail.html#Daba"> Diop</a></th>
             <th> <input type="button" value="suprimer"></th>
         </tr>
         <tr>
