modification de pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <nav>
         <ul style="list-style-type: style none;">
             <li style="display: inline-block; padding: 10px 30px;">
-                <a href="accuil.html"> Acceuil </a>
+                <a href="acceuil.html"> Acceuil </a>
             </li>
             <li style="display: inline-block; padding: 20px 40px;">
                 <a href="formulaire.html"> Formulaire d'inscription </a>
