--- a/liste_apprenant.html
+++ b/liste_apprenant.html
@@ -7,44 +7,39 @@
     <title>Liste des Apprement de AWS re/Start</title>
 </head>
 <body>
+  <table border="1">
     <h1> 
-    <center> LISTE DES APPRENANTS </center>
+       <center> LISTE DES APPRENANTS </center>
     </h1>
-    <table border="5" align="center">
-        <tr>
-            <th> Prenom</th>
-            <th> Nom</th>
-            <th> Suprimer</th>
-        </tr>
-        
-        <tr>
-            <th> Daba</th>
-            <th> <a href="detail.html#Daba"> Diop</a></th>
-            <th> <input type="button" value="suprimer"></th>
-        </tr>
-        <tr>
-            <th> Djdji Samba</th>
-            <th> <a href="detailler-apprenant.html#Djdji Samba"> Sow</a></th>
-            <th> <input type="button" value="suprimer"></th>
-        </tr>
-        <tr>
-            <th> Mouhamed</th>
-            <th> <a href="detailler-apprenant.html#Mouhamed"> Tall</a></th>
-            <th> <input type="button" value="suprimer"></th>
-        </tr>
-        <tr>
-            <th> Mame Bineta</th>
-            <th> <a href="detailler-apprenant.html#Mame Binta"> Diakite</a></th>
-            <th> <input type="button" value="suprimer"></th>
-        </tr>
-        <tr>
-            <th> Moustapha</th>
-            <th> <a href="detailler-apprenant.html#Mouhamed"> Thiam</a></th>
-            <th> <input type="button" value="suprimer"></th>
-        </tr>
+    <tr>
+        <th> Nom</th>
+        <th> Prenom</th>
+        <th> Email</th>
+        <th> Formation</th>
+        <th> Details</th>
+        <th> Suprimer</th>
+    </tr>
+    <tr>
+      <td> Diop </td>
+      <td> Daba </td>
+      <td> diop@yahoo.com </td>
+      <td> AWS re/start </td>
+      <td> <a href="details.html"> Voir details </a> </td>
+      <td> <input type="button" value="suprimer"></td>
 
-    </table>
+    </tr>
+    <tr>
+        <td> Ndiaye </td>
+        <td> Fatou </td>
+        <td> ndiaye@yahoo.com </td>
+        <td> Base de donnée </td>
+        <td> <a href="details.html"> Voir details</a> </td>
+        <td> <input type="button" value="suprimer"></td>
 
+  
+      </tr>
+
+  </table>  
     
 </body>
 </html>
