--- a/acceuil.html
+++ b/acceuil.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/index.css">
     <title>connexion</title>
 </head>
 <body>
-    <h1> <center>Page de connexion</center></h1>
+ 
+    <h1> <center>Page de connexion</center></h1><br><br> 
+
+
     <fieldset>
         <form action="">
             <div>
