ajout de bootstrap

--- a/bootstrap/apropos.html
+++ b/bootstrap/apropos.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="about.css">
+    <!--<link rel="stylesheet" href="about.css">-->
     <title>A Propos</title>
 </head>
 <body>
     <nav class="barre_nav">
         <ul class="list_nav">
             <li>
-                <a href="accueil.html"> <img src="images/SA.png" height="40" width="75"> </a>
+                <a href="accueil.html"> <img src="SA.jpg" height="40" width="75"> </a>
             </li>
             <li>
                 <a href="accueil.html"> Accueil</a>
@@ -36,7 +36,7 @@
     </nav>
     <section class="body_section">
         <h1>À propos du programme d’études</h1>
-        <img src="images\OIP.jpg" >
+        <img src="apprenant.jpg" >
         <p>
             Le programme AWS re/Start est adapté pour répondre aux besoins des apprenants où ils en sont <br>
             dans leur parcours d’apprentissage, les objectifs souhaités et les modalités d’apprentissage. <br>
@@ -68,7 +68,7 @@
      </div> <br>
      <div>
         <h1>Caractéristiques de l’apprenant</h1>
-        <img src="images\aws-restart_students.jpg">
+        <img src="caractristic.PNG">
         <p>
             Notez que les qualifications des apprenants peuvent différer selon l’emplacement et l’organisation collaboratrice. <br>
             Pour plus d’informations sur les qualifications et les applications des élèves. <br>
