--- a/bootstrap/connexion.html
+++ b/bootstrap/connexion.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="connexion.css">
+    <!--<link rel="stylesheet" href="connexion.css">-->
     <title>Connexion</title>
 </head>
 
@@ -13,7 +13,7 @@
     <nav class="barre_nav">
         <ul class="list_nav">
             <li>
-                <a href="accueil.html"> <img src="images/SA.png" height="40" width="75"> </a>
+                <a href="accueil.html"> <img src="SA.jpg" height="40" width="75"> </a>
             </li>
             <li>
                 <a href="accueil.html"> Accueil</a>
@@ -38,7 +38,7 @@
     </nav>
     <section class="the_section">
         <div class="part1">
-            <img src="images/AdobeStock_507021483_Preview.png" alt="" width="550" height="600">
+            <img src="ins.jpg" alt="" width="550" height="600">
         </div>
         <div class="part2">
             <div class="div_h1">
