--- a/bootstrap/inscrire.html
+++ b/bootstrap/inscrire.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="inscrire.css">
+   <!-- <link rel="stylesheet" href="inscrire.css">-->
     <title>Inscription</title>
 </head>
 
@@ -14,7 +14,7 @@
     <nav class="barre_nav">
         <ul class="list_nav">
             <li>
-                <a href="accueil.html"> <img src="images/SA.png" height="40" width="75"> </a>
+                <a href="accueil.html"> <img src="SA.jpg" height="40" width="75"> </a>
             </li>
             <li>
                 <a href="accueil.html"> Accueil</a>
@@ -51,7 +51,7 @@
             sed. Qui ipsum ipsa eveniet nam aliquid hic nobis saepe sed, eum in ratione quos molestias.
         </p>
         <form method="post" enctype="multipart/form-data">
-            <fieldset style="height: 700px;">
+            <fieldset style="height: 300px; ">
                 <legend> <strong>Vos Informations personnelles</strong> </legend>
                 <div class="cl_formulaire">
                     <div class="cl_remplir">
@@ -87,9 +87,9 @@
                             <input type="text" name="addresse" id="adresse" placeholder="Dakar-Mermoz Rue 22">
                         </div>
                     </div>
-                    <div>
-                        <img class="img_form" src="images/flat-g88de1f966_1280.png">
-                    </div>
+                    <!--<div>
+                        <img class="img_form" src="inscription.PNG">
+                    </div>-->
                 </div>
             </fieldset>
             <br>
