--- a/bootstrap/accueil.html
+++ b/bootstrap/accueil.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="accueil.css">   
+      
     <title>Accueil</title>
 </head>
 <body>
     <nav class="barre_nav">
         <ul class="list_nav">
             <li>
-                <a href="accueil.html"> <img src="images/SA.png" height="40" width="75"> </a>
+                <a href="accueil.html"> <img src="SA.jpg" height="40" width="75"> </a>
             </li>
             <li>
                 <a href="accueil.html"> Accueil</a>
@@ -37,7 +37,7 @@
     </nav>
     <div class="container">
         <div class="largeimage">
-            <img src="images/wordpress-923188_1920.jpg" alt="large home image" height="560" width="1264">
+            <img src="ac.PNG" alt="large home image" height="400" width="1400">
         </div>
         <div class="text-img">
             <h1> Aider les gens à lancer une carrière dans le cloud AWS</h1>
@@ -45,7 +45,7 @@
 
     </div>
 
-    <img src="images/" alt="">
+    <img src="aws.jpg" alt="">
     <section class="body_section">
         <h1>Bienvenue dans le programme AWS Re/Start</h1>
         <p>
@@ -64,8 +64,8 @@
             dignissimos.
         </p>
         <div id="ac_image">
-            <img src="images\SA.png" width="450" style="margin-bottom: 40px;">
-            <img src="images\AWS_Restart_Logo_RGB.png" width="450" height="180" style="margin-top: 60px;">
+            <img src="SA.jpg" width="450" style="margin-bottom: 40px;">
+            <img src="aws.jpg" width="450" height="180" style="margin-top: 60px;">
         </div>
         <h1>Aider les gens à lancer une carrière dans le cloud</h1>
         <div class="acc1">
@@ -119,7 +119,7 @@
             </div> <br>
 
             <div class="acc2">
-                <img src="images\AWS-restart-.jpg" width="780" height="388">
+                <img src="section.jpg" width="780" height="388">
             </div>
 
         </div>
@@ -160,7 +160,7 @@
                     </p>
                 </div>
                 <div id="img_interview">
-                    <img src="images/interview-6956089_1280.png" width="550" height="500">
+                    <img src="interview.jpg" width="550" height="500">
                 </div>
             </div>
         </div>
