--- a/bootstrap/detaille.html
+++ b/bootstrap/detaille.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="list.css">
+    <!--<link rel="stylesheet" href="list.css">-->
     <title>Details des infos</title>
 </head>
 <body>
     <nav class="barre_nav">
         <ul class="list_nav">
             <li>
-                <a href="accueil.html"> <img src="images/SA.png" height="40" width="75"> </a>
+                <a href="accueil.html"> <img src="SA.jpg" height="40" width="75"> </a>
             </li>
             <li>
                 <a href="accueil.html"> Accueil</a>
