ajout de la page d'inscription et list

--- a/bootstrap/acceuil.html
+++ b/bootstrap/acceuil.html
@@ -40,8 +40,28 @@
       </nav>
       <div class="container col-xxl-8 px-4 py-5">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-          <div class="col-10 col-sa-8 col-lg-6">
+          <!-- <div class="col-10 col-sa-8 col-lg-6">
             <img src="ac.PNG" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+        </div> -->
+        <div id="carouselExampleSlidesOnly" class="carousel slide col-10 col-sa-8 col-lg-6" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="SA.jpg" class="d-block w-60"  alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="section.jpg" class="d-block w-20" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="ac.PNG" class="d-block  w-20 " alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="OIP.jpg" class="d-block w-20" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="aws.jpg" class="d-block w-20" alt="...">
+            </div>
+            
+          </div>
         </div>
         <div class="col-lg-6">
           <h1 class="display-4 fw-bold lh-l ab-3"> Bienvenue à la Sonatel Academy</h1>
