ajout des points

--- a/bootstrap/liste.html
+++ b/bootstrap/liste.html
@@ -19,6 +19,8 @@
             <th scope="col">Date de Naissance</th>
             <th scope="col">Tel</th>
             <th scope="col">Formation</th>
+            <th scope="col">Actions</th>
+
           </tr>
         </thead>
         <tbody>
@@ -31,6 +33,11 @@
             <td>17-12-2002</td>
             <td>772060621</td>
             <td>AWS re/start</td>
+            <td>
+              <a href="" class="btn btn-success">ajouter</a>
+              <a href="" class="btn btn-warning">modifier</a>
+              <a href="" class="btn btn-danger">supprimer</a>
+            </td>
           </tr>
           <tr>
             <th scope="row">2</th>
@@ -41,6 +48,11 @@
             <td>01-12-2002</td>
             <td>772040623</td>
             <td>AWS re/start</td>
+            <td>
+              <a href="" class="btn btn-success">ajouter</a>
+              <a href="" class="btn btn-warning">modifier</a>
+              <a href="" class="btn btn-danger">supprimer</a>
+            </td>
           </tr>
           <tr>
             <th scope="row">3</th>
@@ -51,6 +63,11 @@
             <td>17-13-2002</td>
             <td>772060622</td>
             <td>Reference digital</td>
+            <td>
+              <a href="" class="btn btn-success">ajouter</a>
+              <a href="" class="btn btn-warning">modifier</a>
+              <a href="" class="btn btn-danger">supprimer</a>
+            </td>
           </tr>
           
           
